# learning_django

./: .eslintrc.json  .gitignore  package-lock.json  package.json  pyproject.toml  requirements.txt
myproject/: settings.py  urls.py  views.py
myproject/static/css/: input.css
polls/: admin.py  forms.py  models.py  urls.py  views.py
polls/migrations/: 0001_initial.py  0002_alter_question_pub_date.py  0003_alter_question_pub_date.py
polls/templates/polls/: auth.html  create.html  default.html  details.html  header.html  index.html  results.html  toolbar.html
polls/tests/: test_models.py  test_views.py
static/css/: tailwind.css
